# DroneApp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  qml.qrc
Drone/: BackDrone.qml  CMakeLists.txt  Camera.qml  CameraItem.qml  Compass.qml  DroneItem.qml  InfoItem.qml  MoveItem.qml  PanelInfo.qml  qmldir
Drone/include/: dronecore.h
Drone/src/: drenecore.cpp  droneapi.cpp  droneapi.h
examples/simple/: CMakeLists.txt  main.cpp  main.qml
examples/simple1/: main.cpp  main.qml
examples/simplePython/: main.py  main.qml
